5.1.0~beta13 (2015-04-22)
FIX: support fanart of channel in new implementation of 'My Subscriptions'

5.1.0~beta12 (2015-04-21)
UPD: Double login to support 'My subscriptions' via YouTube TV API

5.1.0~beta11 (2015-04-15)
UPD: new fanart and icon

5.1.0~beta10 (2015-04-13)
UPD: changed credentials

5.1.0~beta9 (2015-04-12)
UPD: minimal quota-optimization
UPD: YouTube relevant description links - improved extraction and resolving of video/playlist urls
FIX: YouTube relevant description links - script error while some server return garbage for a location

5.1.0~beta8 (2015-04-07)
UPD: YouTube relevant description links - improved extraction and resolving of user/channel urls
UPD: YouTube relevant description links - improved performance resolving urls with caching

5.1.0~beta7 (2015-04-06)
FIX: solved blank items of extracted YouTube relevant links
UPD: improved YouTube relevant link extraction

5.1.0~beta6 (2015-04-05)
UPD: create videos and playlists (if possible) from certain links
FIX: script error while resolving url fails
FIX: script error while adding video to a playlist

5.1.0~beta5 (2015-04-03)
ADD: 'More Links from the description' - extracts furthur links from the description

5.1.0~beta4 (2015-03-31)
UPD: French (thx 2 eauland)

5.1.0~beta3 (2015-03-25)
UPD: regex optimizations for season and expisode extraction
UPD: kodion 1.2.0 tests (regex optimizations)

5.1.0~beta2 (2015-03-24)
UPD: kodion 1.2.0 tests

5.1.0~beta1 (2015-03-23)
ADD: Korean (thx 2 piodio)
FIX: show seconds (runtime) in Gotham

5.0.9 (2015-03-14)
ADD: 'duration' optimized for KODI 15.X (Isengard)
ADD: EndPoint for listing the videos of a playlist: "plugin://plugin.video.youtube/playlist/<PLAYLIST_ID>/"
UPD: optimized client-/server transfer (use gzip)

5.0.8 (2015-03-05)
UPD: Polish (thx 2 Etharr)
UPD: Russian (thx 2 BytEvil)
FIX: improved playback

5.0.7 (2015-02-27)
ADD: 'Refresh' in 'My Subscriptions' and all my playlists
ADD: rename search history item
UPD: French (thx 2 Trilip)